--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#0063A4</color>
-    <color name="colorPrimaryDark">#0D47A1</color>
+    <color name="colorPrimaryDark">#034E80</color>
     <color name="colorAccent">#FFD600</color>
 
     <color name="white">#FFFFFF</color>
