--- a/app/src/main/res/layout/nav_route_item.xml
+++ b/app/src/main/res/layout/nav_route_item.xml
@@ -1,12 +1,31 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <TextView
-        android:id="@android:id/text1"
+<?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        android:gravity="center_vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:background="?android:attr/activatedBackgroundIndicator"
-        android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/nav_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:gravity="center_vertical"
+            android:src="@drawable/ic_directions_bus_24dp"/>
+
+        <TextView
+            android:id="@+id/nav_route_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceListItemSmall"
+            android:gravity="center_vertical"
+            android:background="?android:attr/activatedBackgroundIndicator"
+            android:minHeight="?android:attr/listPreferredItemHeightSmall"
+            tools:text="route name"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/nav_icon"
+            android:layout_toEndOf="@+id/nav_icon" />
+
+    </RelativeLayout>
 </layout>
