--- a/app/src/main/res/layout/nav_route_item.xml
+++ b/app/src/main/res/layout/nav_route_item.xml
@@ -10,9 +10,13 @@
             android:id="@+id/nav_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="8dp"
             android:gravity="center_vertical"
-            android:src="@drawable/ic_directions_bus_24dp"/>
+            android:src="@drawable/ic_directions_bus_24dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:id="@+id/nav_route_name"
