--- a/app/src/main/res/layout/arrivals_main.xml
+++ b/app/src/main/res/layout/arrivals_main.xml
@@ -19,7 +19,13 @@
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 android:background="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|enterAlways|snap"/>
-
         </android.support.design.widget.AppBarLayout>
+
+        <FrameLayout
+            android:id="@+id/main_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
     </android.support.design.widget.CoordinatorLayout>
 </layout>
