--- a/app/src/main/res/layout/prediction_item.xml
+++ b/app/src/main/res/layout/prediction_item.xml
@@ -8,7 +8,7 @@
     android:background="@color/colorPrimaryDark">
 
     <TextView
-        android:id="@+id/route_name"
+        android:id="@+id/prediction_route_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="C - Camino del Sol"
@@ -17,7 +17,7 @@
         android:padding="16dp" />
 
     <TextView
-        android:id="@+id/arrival_time"
+        android:id="@+id/prediction_arrival_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10 min"
@@ -28,23 +28,23 @@
         android:layout_alignParentRight="true" />
 
     <TextView
-        android:id="@+id/stop_name"
+        android:id="@+id/prediction_stop_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
         android:text="University Center - North (UCI Admin)"
         android:paddingLeft="16dp"
         android:paddingBottom="16dp"
-        android:layout_below="@+id/arrival_time"
+        android:layout_below="@+id/prediction_arrival_time"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <CheckBox
-        android:id="@+id/favorite_button"
+        android:id="@+id/prediction_favorite_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:button="@drawable/favorites_selector"
-        android:layout_below="@+id/arrival_time"
+        android:layout_below="@+id/prediction_arrival_time"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="16dp"
