--- a/app/src/main/res/layout/text_row_item.xml
+++ b/app/src/main/res/layout/text_row_item.xml
@@ -24,6 +24,7 @@
 
     <TextView
         android:id="@+id/textView"
+        android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/element_text"/>
