--- a/app/src/main/res/layout/prediction_item.xml
+++ b/app/src/main/res/layout/prediction_item.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryDark">
+    android:background="#B7B7B7">
 
     <TextView
         android:id="@+id/prediction_route_name"
