--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- UCI color palette from guidelines -->
     <color name="colorPrimary">#0063A4</color>
-    <color name="colorPrimaryDark">#034E80</color>
-    <color name="colorAccent">#FFD600</color>
+    <color name="colorPrimaryDark">#1B3D6D</color>
+    <color name="colorAccent">#FFD200</color>
 
     <color name="white">#FFFFFF</color>
 
