--- a/app/src/main/res/layout/prediction_item_expanded.xml
+++ b/app/src/main/res/layout/prediction_item_expanded.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v7.widget.GridLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -7,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:orientation="horizontal"
     app:columnCount="5"
-    app:rowCount="2"
+    app:rowCount="3"
     tools:background="#B7B7B7">
 
     <TextView
@@ -18,18 +17,37 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:textColor="@color/white"
         app:layout_columnSpan="3"
-        android:padding="16dp" />
+        android:paddingTop="16dp"
+        android:paddingLeft="16dp"
+        app:layout_row="0"
+        app:layout_column="0" />
 
     <TextView
         android:id="@+id/prediction_arrival_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="1 min"
+        android:paddingRight="16dp"
+        app:layout_columnSpan="2"
+        app:layout_gravity="bottom|right"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textColor="@color/white"
+        app:layout_row="0"
+        app:layout_column="3" />
+
+    <TextView
+        android:id="@+id/prediction_arrival_time_alt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_column="3"
         android:text="10 min"
         android:paddingRight="16dp"
         app:layout_columnSpan="2"
         app:layout_gravity="center|right"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textColor="@color/white" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
+        android:textColor="@color/white"
+        android:visibility="gone"
+        app:layout_row="1" />
 
     <TextView
         android:id="@+id/prediction_stop_name"
@@ -37,9 +55,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
         android:text="University Center - North (UCI Admin)"
-        app:layout_columnSpan="3"
         android:paddingLeft="16dp"
-        android:paddingBottom="16dp"/>
+        android:paddingBottom="16dp"
+        app:layout_row="2"
+        app:layout_column="2"
+        app:layout_gravity="left" />
 
     <CheckBox
         android:id="@+id/prediction_favorite_button"
@@ -47,6 +67,8 @@
         android:layout_height="wrap_content"
         app:layout_column="4"
         android:paddingRight="16dp"
-        android:button="@drawable/favorites_selector" />
+        android:button="@drawable/favorites_selector"
+        app:layout_row="2"
+        app:layout_gravity="right" />
 
 </android.support.v7.widget.GridLayout>
