--- a/app/src/main/res/layout/prediction_item_expanded.xml
+++ b/app/src/main/res/layout/prediction_item_expanded.xml
@@ -14,11 +14,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="C - Camino del Sol"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         android:textColor="@color/white"
         app:layout_columnSpan="3"
-        android:paddingTop="16dp"
-        android:paddingLeft="16dp"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
         app:layout_row="0"
         app:layout_column="0" />
 
@@ -27,10 +27,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1 min"
-        android:paddingRight="16dp"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         app:layout_columnSpan="2"
         app:layout_gravity="bottom|right"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         android:textColor="@color/white"
         app:layout_row="0"
         app:layout_column="3" />
@@ -41,22 +41,25 @@
         android:layout_height="wrap_content"
         app:layout_column="3"
         android:text="10 min"
-        android:paddingRight="16dp"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/item_vertical_margin"
         app:layout_columnSpan="2"
         app:layout_gravity="center|right"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
         android:textColor="@color/white"
         android:visibility="gone"
-        app:layout_row="1" />
+        app:layout_row="1"
+        android:maxHeight="84dp"/>
 
     <TextView
         android:id="@+id/prediction_stop_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
         android:text="University Center - North (UCI Admin)"
-        android:paddingLeft="16dp"
-        android:paddingBottom="16dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/item_vertical_margin"
         app:layout_row="2"
         app:layout_column="2"
         app:layout_gravity="left" />
@@ -66,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_column="4"
-        android:paddingRight="16dp"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:button="@drawable/favorites_selector"
         app:layout_row="2"
         app:layout_gravity="right" />
