working nearby, location filter

--- a/app/src/main/res/layout/nav_header_arrivals.xml
+++ b/app/src/main/res/layout/nav_header_arrivals.xml
@@ -11,10 +11,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:gravity="center"
+        android:src="@drawable/ic_directions_bus_accent_24dp"
+        android:scaleType="fitCenter"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:gravity="center"
+        android:layout_weight="1"
         android:text="@string/app_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
