--- a/app/src/main/res/layout/nav_route_item.xml
+++ b/app/src/main/res/layout/nav_route_item.xml
@@ -10,8 +10,8 @@
             android:id="@+id/nav_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="8dp"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/item_vertical_margin"
             android:gravity="center_vertical"
             android:src="@drawable/ic_directions_bus_black_24dp"
             android:layout_centerVertical="true"
