--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,4 +2,5 @@
 <resources>
     <!-- Nearby distance in meters-->
     <integer name="nearby_distance">500</integer>
+    <integer name="map_bottom_dimen">180</integer>
 </resources>
