--- a/app/src/main/res/layout/fragment_map_buttons.xml
+++ b/app/src/main/res/layout/fragment_map_buttons.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,4 +11,4 @@
         android:background="@color/map_transparent_white"
         android:layout_margin="@dimen/item_vertical_margin" />
 
-</LinearLayout>
+</FrameLayout>
